WEB-9651: Fix resolution comment label from wrapping on SDR index page.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -6935,8 +6935,8 @@ td.ticket-total::before {
   background-color: $faint-neutral-color !important;
 }
 
-#sdr-index-edit-ticket-status-dropdown, #show-ticket-resolution-menu {
-  min-width: 160px;
+#sdr-index-edit-ticket-status-dropdown {
+  min-width: 162px;
 }
 
 #index-ticket-resolution-submenu, #index-entry-resolution-submenu, #sdr-index-dispute-resolution-submenu {
